--- a/dgm/about/today.html
+++ b/dgm/about/today.html
@@ -59,8 +59,10 @@
 				<h1 class="heading_header heading_h2">История сейчас</h1>
     </header>
 		<section class="sidebar_content">
+				<section class="sidebar_content_inner">
+
 			<div class="history_foto">
-			 	<img src="../assets/img/426834_main.jpg" alt="">
+			 	<img class="history_foto_img" src="../assets/img/bg_about1.jpg" alt="">
 			</div>
 			<div class="history_content">
 				<p>Завод основан в 1889 году бельгийскими инженерами Боссе и Генефельдом. До 1935 года выпускал оборудование под маркой «БОССЕ». С 1935 заводу присвоено имя «15-летия комсомола Донбасса», а позже «Машиностроительный завод Ленинского комсомола Украины», с 1995 года «Донецкгормаш», а в 2014 году ГП «Донецкгормаш».
@@ -78,7 +80,7 @@
 					- в апреле 2004г. – предприятие награждено «Серебряной стелой» и Дипломом в номинации «Качество третьего тысячелетия» международного академического рейтинга «Золотая фортуна» <br> - в августе 2004г. Ассамблеей Деловых кругов Украины присужден международный сертификат качества «Вища проба»<br> - в ноябре 2004г. на Всеукраинском конкурсе «100 кращіх товарів України» погрузочно-транспортная машина ПД-8 удостоена Диплома лауреата этого конкурса.</p>
 			</div>
 			<div class="history_foto">
-				<img src="../assets/img/zrcWFYy2g7s.jpg" alt="">
+				<img class="history_foto_img" src="../assets/img/zrcWFYy2g7s.jpg" alt="">
 			</div>
 			<div class="history_content decolist">
 					<p>	На заводе имеется литейное, кузнечно-прессовое, механосборочное, сварочное, инструментальное производство, что обусловливает замкнутый производственный цикл практически для всей номенклатуры выпускаемого оборудования.</p>
@@ -87,7 +89,7 @@
 					<p></p>
 			</div>
 		</section>
-
+	</section>
 </section>
 
 
