--- a/dgm/contact/contactform.html
+++ b/dgm/contact/contactform.html
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	</header>
-<div class="header_container"></div>
+<div class="header_container" id="contactform"></div>
 
 
 
@@ -235,7 +235,6 @@
 	</div>
 	</footer>
 		<script src="../assets/js/jquery-3.3.1.min.js"></script>
-		<script src="../assets/js/jquery.maskedinput.js"></script>
 		<script src="../assets/js/script.js"></script>
 	</body>
 	</html>
