--- a/dgm/contact/index.html
+++ b/dgm/contact/index.html
@@ -55,22 +55,24 @@
 			<h1 class="heading_header heading_h2">Контакты</h1>
 	</header>
 	<section class="sidebar_content">
+			<section class="sidebar_content_inner">
 		<!-- <div class="history_foto">
 			 <img src="../assets/img/history1.jpg" alt="">
 		</div> -->
-		<div class="history_content">
-			<h3 class="heading_h3">Миссия</h3>
-			<p> Мы стремимся к совершенству, предлагая нашим клиентам эффективные решения на пути от проектирования до эксплуатации оборудования для добычи, транспортировки и переработки природных ресурсов
-			</p>
-		</div>
+			<div class="history_content">
+				<h3 class="heading_h3">Миссия</h3>
+				<p> Мы стремимся к совершенству, предлагая нашим клиентам эффективные решения на пути от проектирования до эксплуатации оборудования для добычи, транспортировки и переработки природных ресурсов
+				</p>
+			</div>
 
-		<div class="history_content">
-			<h3 class="heading_h3">Видение</h3>
-			<p> Стать одной из лидирующих компаний, которая использует наиболее прогрессивные методы удовлетворения потребностей клиентов и  производит востребованное на каждом из основных континентальных рынков оборудование для добычи, транспортировки и переработки природных ресурсов.
-			</p>
-		</div>
+			<div class="history_content">
+				<h3 class="heading_h3">Видение</h3>
+				<p> Стать одной из лидирующих компаний, которая использует наиболее прогрессивные методы удовлетворения потребностей клиентов и  производит востребованное на каждом из основных континентальных рынков оборудование для добычи, транспортировки и переработки природных ресурсов.
+				</p>
+			</div>
+		</section>
 	</section>
-
+</section>
 
 
 
