--- a/dgm/about/history.html
+++ b/dgm/about/history.html
@@ -58,28 +58,29 @@
 		<header class="minor_header">
 				<h1 class="heading_header heading_h2">История основания</h1>
     </header>
-		<section class="sidebar_content">
-			<div class="history_foto">
-			 	<img src="../assets/img/history1.jpg" alt="">
-			</div>
-			<div class="history_content">
-				<p>В 1889 году два инженера-предпринимателя немецкого происхождения Эдуард Боссе и Рудольф Геннефельд приобрели у помещика и шахтовладельца Рутченко несколько десятин земли и основали возле села Григорьевки одноименной волости Бахмутского уезда Екатеринославской губернии машиностроительный и чугунолитейный завод. </p><p>Хозяева предприятия резонно понимали, что для развивающейся в Донецком бассейне угольной промышленности требуется много оборудования, и поэтому хотели заполучить эти перспективные заказы, чтобы обеспечить себе небедную жизнь и выбиться в люди на необъятных просторах Российской империи.</p>
-			</div>
+		<section class="sidebar_content history_old">
+			<section class="sidebar_content_inner">
+				<div class="history_foto history_olf_foto">
+					<img class="history_foto_img" src="../assets/img/history1.jpg" alt="">
+				</div>
+				<div class="history_content">
+					<p>В 1889 году два инженера-предпринимателя немецкого происхождения Эдуард Боссе и Рудольф Геннефельд приобрели у помещика и шахтовладельца Рутченко несколько десятин земли и основали возле села Григорьевки одноименной волости Бахмутского уезда Екатеринославской губернии машиностроительный и чугунолитейный завод. </p><p>Хозяева предприятия резонно понимали, что для развивающейся в Донецком бассейне угольной промышленности требуется много оборудования, и поэтому хотели заполучить эти перспективные заказы, чтобы обеспечить себе небедную жизнь и выбиться в люди на необъятных просторах Российской империи.</p>
+				</div>
 
-			<div class="history_content list">
-				<p> На заводе производились:<br> - паровые машины<br> - углеподъемные машины<br> - паровые и ручные лебедки<br> - паровые котлы<br> - паровые и ручные насосы и вентиляторы<br> - паровые водоотливные машины<br> - шкивы ремневые и канатные до 4 метров диаметром<br> - клети<br> - самоотцепляющиеся аппараты и остановочные снаряды<br> - вагонетки разных видов<br> - буровые инструменты</p>
+				<div class="history_content list">
+					<p> На заводе производились:<br> - паровые машины<br> - углеподъемные машины<br> - паровые и ручные лебедки<br> - паровые котлы<br> - паровые и ручные насосы и вентиляторы<br> - паровые водоотливные машины<br> - шкивы ремневые и канатные до 4 метров диаметром<br> - клети<br> - самоотцепляющиеся аппараты и остановочные снаряды<br> - вагонетки разных видов<br> - буровые инструменты</p>
 
-			</div>
-			<div class="history_foto">
-				<img src="../assets/img/bosse_gennefild_1896.jpg" alt="">
-			</div>
-			<div class="history_content">
-					<p> Правительство Российской империи высоко оценило заслуги одного из владельцев предприятия — Эдуарда Артуровича Боссе. В 1896 году он удостоился почетного звания потомственного Почетного гражданина, видимо, города Бахмута Екатеринославской губернии, а вот прусскому подданному Рудольфу Генриховиу Геннефельду, видно, в тот год время еще не вышло получать такой знак отличия. С каждым годом завод креп, росло его производство. </p><p>В 1910 году был построен новый литейный цех, расширены модельный и механический цеха, в кузнечном цехе добавился горн и был поставлен молот. На заводе работали 200 рабочих. Начавшаяся Первая мировая война не сильно ухудшила финансовое положение предприятия — заказов хватало. Правда, легким труд рабочих никогда не был. </p><p>Сегодня бывший завод Боссе, или 15-летия Ленинского комсомола, является Государственным Предприятием ГП «Донецкгормаш». Здесь выпускают продукцию для нужд угольной, железорудной, химической промышленности, а также производят отдельные виды оборудования для металлургических заводов и предприятий электроэнергетики — в принципе, всем этим и занимается завод на протяжении своего векового существования.</p>
+				</div>
+				<div class="history_foto">
+					<img class="history_foto_img" src="../assets/img/bosse_gennefild_1896.jpg" alt="">
+				</div>
+				<div class="history_content">
+						<p> Правительство Российской империи высоко оценило заслуги одного из владельцев предприятия — Эдуарда Артуровича Боссе. В 1896 году он удостоился почетного звания потомственного Почетного гражданина, видимо, города Бахмута Екатеринославской губернии, а вот прусскому подданному Рудольфу Генриховиу Геннефельду, видно, в тот год время еще не вышло получать такой знак отличия. С каждым годом завод креп, росло его производство. </p><p>В 1910 году был построен новый литейный цех, расширены модельный и механический цеха, в кузнечном цехе добавился горн и был поставлен молот. На заводе работали 200 рабочих. Начавшаяся Первая мировая война не сильно ухудшила финансовое положение предприятия — заказов хватало. Правда, легким труд рабочих никогда не был. </p><p>Сегодня бывший завод Боссе, или 15-летия Ленинского комсомола, является Государственным Предприятием ГП «Донецкгормаш». Здесь выпускают продукцию для нужд угольной, железорудной, химической промышленности, а также производят отдельные виды оборудования для металлургических заводов и предприятий электроэнергетики — в принципе, всем этим и занимается завод на протяжении своего векового существования.</p>
 
-					<p>Примечателен завод Боссе еще и тем, что здесь работал будущий руководитель Советского Союза Никита Сергеевич Хрущев. Когда ему исполнилось 15 лет (1909 год), отец отвел его к управляющему предприятия Вагнеру с просьбой принять сына в ученики слесаря. Так начались трудовые годы будущего грозного Генсека. А 22 февраля 1989 года во время своего визита в Донецк завод посетил первый и последний президент СССР Михаил Горбачев.</p>
-			</div>
+						<p>Примечателен завод Боссе еще и тем, что здесь работал будущий руководитель Советского Союза Никита Сергеевич Хрущев. Когда ему исполнилось 15 лет (1909 год), отец отвел его к управляющему предприятия Вагнеру с просьбой принять сына в ученики слесаря. Так начались трудовые годы будущего грозного Генсека. А 22 февраля 1989 года во время своего визита в Донецк завод посетил первый и последний президент СССР Михаил Горбачев.</p>
+				</div>
 		</section>
-
+	</section>
 </section>
 
 
