--- a/dgm/about/index.html
+++ b/dgm/about/index.html
@@ -58,10 +58,12 @@
 	<header class="minor_header">
 			<h1 class="heading_header heading_h2">Миссия и ценности</h1>
 	</header>
-	<section class="sidebar_content">
-		<!-- <div class="history_foto">
-			 <img src="../assets/img/history1.jpg" alt="">
-		</div> -->
+	<section class="sidebar_content ">
+			<section class="sidebar_content_inner">
+
+		<div class="history_foto">
+			 <img class="history_foto_img" src="../assets/img/bg_about3.jpg" alt="">
+		</div>
 		<div class="history_content">
 			<h3 class="heading_h3">Миссия</h3>
 			<p> Мы стремимся к совершенству, предлагая нашим клиентам эффективные решения на пути от проектирования до эксплуатации оборудования для добычи, транспортировки и переработки природных ресурсов
@@ -80,6 +82,7 @@
 				</div>
 		</div>
 
+		</section>
 
 	</section>
 
