--- a/dgm/about/today.html
+++ b/dgm/about/today.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>О нас</title>
+	<title>История сейчас</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
@@ -50,8 +50,6 @@
 					<a href="history.html">История основания</a>
 					<br>
 					<a href="today.html">История сейчас</a>
-					<br>
-					<a href="managers.html">Руководство</a>
 				</div>
 			</nav>
 		</div>
@@ -61,8 +59,8 @@
 		<section class="sidebar_content">
 				<section class="sidebar_content_inner">
 
-			<div class="history_foto">
-			 	<img class="history_foto_img" src="../assets/img/bg_about1.jpg" alt="">
+			<div class="history_foto history_first_foto">
+			 	<img class="history_foto_img history_first_foto_img" src="../assets/img/bg_about1.jpg" alt="">
 			</div>
 			<div class="history_content">
 				<p>Завод основан в 1889 году бельгийскими инженерами Боссе и Генефельдом. До 1935 года выпускал оборудование под маркой «БОССЕ». С 1935 заводу присвоено имя «15-летия комсомола Донбасса», а позже «Машиностроительный завод Ленинского комсомола Украины», с 1995 года «Донецкгормаш», а в 2014 году ГП «Донецкгормаш».
