--- a/dgm/personnel/vacancy.html
+++ b/dgm/personnel/vacancy.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>О нас</title>
+	<title>Вакансии</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
@@ -56,8 +56,8 @@
     </header>
 		<section class="sidebar_content history_old">
 			<section class="sidebar_content_inner">
-				<div class="history_foto history_olf_foto">
-					<img class="history_foto_img" src="../assets/img/career3.jpg" alt="">
+				<div class="history_foto history_first_foto">
+					<img class="history_foto_img history_first_foto_img" src="../assets/img/career3.jpg" alt="">
 				</div>
 				<div class="history_content">
 					<p>В 1889 году два инженера-предпринимателя немецкого происхождения Эдуард Боссе и Рудольф Геннефельд приобрели у помещика и шахтовладельца Рутченко несколько десятин земли и основали возле села Григорьевки одноименной волости Бахмутского уезда Екатеринославской губернии машиностроительный и чугунолитейный завод. </p><p>Хозяева предприятия резонно понимали, что для развивающейся в Донецком бассейне угольной промышленности требуется много оборудования, и поэтому хотели заполучить эти перспективные заказы, чтобы обеспечить себе небедную жизнь и выбиться в люди на необъятных просторах Российской империи.</p>
@@ -67,7 +67,7 @@
 					<p> На заводе производились:<br> - паровые машины<br> - углеподъемные машины<br> - паровые и ручные лебедки<br> - паровые котлы<br> - паровые и ручные насосы и вентиляторы<br> - паровые водоотливные машины<br> - шкивы ремневые и канатные до 4 метров диаметром<br> - клети<br> - самоотцепляющиеся аппараты и остановочные снаряды<br> - вагонетки разных видов<br> - буровые инструменты</p>
 
 				</div>
-			
+
 		</section>
 	</section>
 </section>
