--- a/dgm/404.html
+++ b/dgm/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>О нас</title>
+	<title>404</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
@@ -39,7 +39,7 @@
 	</header>
 <div class="header_container"></div>
 <section class="content_sidebar">
-		
+
 		<section class="sidebar_content">
 
 		</section>
