--- a/dgm/about/index.html
+++ b/dgm/about/index.html
@@ -50,8 +50,6 @@
 				<a href="history.html">История основания</a>
 				<br>
 				<a href="today.html">История сейчас</a>
-				<br>
-				<a href="managers.html">Руководство</a>
 			</div>
 		</nav>
 	</div>
@@ -61,8 +59,8 @@
 	<section class="sidebar_content ">
 			<section class="sidebar_content_inner">
 
-		<div class="history_foto">
-			 <img class="history_foto_img" src="../assets/img/bg_about3.jpg" alt="">
+		<div class="history_foto history_first_foto">
+			 <img class="history_foto_img history_first_foto_img" src="../assets/img/bg_about3.jpg" alt="">
 		</div>
 		<div class="history_content">
 			<h3 class="heading_h3">Миссия</h3>
