--- a/dgm/personnel/index.html
+++ b/dgm/personnel/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>О нас</title>
+	<title>Карьера</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
@@ -56,8 +56,8 @@
     </header>
 		<section class="sidebar_content history_old">
 			<section class="sidebar_content_inner">
-				<div class="history_foto history_olf_foto">
-					<img class="history_foto_img" src="../assets/img/career1.jpg" alt="">
+				<div class="history_foto history_first_foto">
+					<img class="history_foto_img history_first_foto_img" src="../assets/img/career1.jpg" alt="">
 				</div>
 				<div class="personnel_content">
 						<div class="personnel_content_leftcol">
