--- a/dgm/about/news.html
+++ b/dgm/about/news.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>О нас</title>
+	<title>Новости</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
@@ -42,60 +42,64 @@
 
 
 <section class="content_sidebar">
-	<div class="sidebar_nav_wrapper">
-		<nav class="sidebar_nav">
-			<div class="sidebar_nav_items">
-				<a href="index.html">Миссия и ценности</a>
-				<br>
-				<a href="history.html">История основания</a>
-				<br>
-				<a href="today.html">История сейчас</a>
-				<br>
-				<a href="news.html">Новости</a>
-			</div>
-		</nav>
-	</div>
-	<header class="minor_header">
-			<h1 class="heading_header heading_h2">Миссия и ценности</h1>
-	</header>
-	<section class="sidebar_content ">
-			<section class="sidebar_content_inner">
-
-		<div class="history_foto history_first_foto">
-			 <img class="history_foto_img history_first_foto_img" src="../assets/img/bg_about3.jpg" alt="">
-		</div>
-		<div class="history_content">
-			<h3 class="heading_h3">Миссия</h3>
-			<p> Мы стремимся к совершенству, предлагая нашим клиентам эффективные решения на пути от проектирования до эксплуатации оборудования для добычи, транспортировки и переработки природных ресурсов
-			</p>
-		</div>
-
-		<div class="history_content">
-			<h3 class="heading_h3">Видение</h3>
-			<p> Стать одной из лидирующих компаний, которая использует наиболее прогрессивные методы удовлетворения потребностей клиентов и  производит востребованное на каждом из основных континентальных рынков оборудование для добычи, транспортировки и переработки природных ресурсов.
-			</p>
-		</div>
-		<div class="history_content">
-				<h3 class="heading_h3">Ценности</h3>
-				<div class="history_foto">
-						<img id="values_dgm" src="../assets/img/dgm-values.svg" alt="">
+		<div class="sidebar_nav_wrapper">
+			<nav class="sidebar_nav">
+				<div class="sidebar_nav_items">
+					<a href="index.html">Миссия и ценности</a>
+					<br>
+					<a href="history.html">История основания</a>
+					<br>
+					<a href="today.html">История сейчас</a>
+					<br>
+					<a href="news.html">Новости</a>
 				</div>
+			</nav>
 		</div>
+		<header class="minor_header">
+				<h1 class="heading_header heading_h2">Новости</h1>
+    </header>
+		<section class="sidebar_content">
+				<section class="sidebar_content_inner">
+						<!-- <div class="history_foto history_first_foto">
+								<img class="history_foto_img history_first_foto_img" src="../assets/img/bg_about1.jpg" alt="">
+						 </div> -->
+						 <!-- <div class="history_content">
+							 <p>Завод основан в 1889 году бельгийскими инженерами Боссе и Генефельдом. До 1935 года выпускал оборудование под маркой «БОССЕ». С 1935 заводу присвоено имя «15-летия комсомола Донбасса», а позже «Машиностроительный завод Ленинского комсомола Украины», с 1995 года «Донецкгормаш», а в 2014 году ГП «Донецкгормаш».
 
+
+
+
+
+								 </p>
+						 </div> -->
+						 <div class="newsmedia">
+								<div class="mission_wrapper">
+								<div class="news_content">
+									<div class="news_content_col">
+										<div class="news_list">
+											<a href="about/news.html" class="news-item">
+												<h4 class="news-item_title heading_h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, officiis aperiam illo sit voluptate porro dolorem sapiente distinctio quia quos assumenda. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные. Далеко-далеко за словесными горами, в стране гласных и согласных... </h4>
+													<p class="news-item_data">30 марта 2018</p>
+
+											</a>
+											<a href="about/news.html" class="news-item">
+												<h4 class="news-item_title heading_h4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque reprehenderit dolore voluptatibus eligendi blanditiis quae optio. Далеко-далеко за словесными горами в стране гласных и согласных... </h4>
+													<p class="news-item_data">10 октября 2018</p>
+
+											</a>
+											<a href="about/news.html" class="news-item">
+												<h4 class="news-item_title heading_h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt obcaecati similique dignissimos quidem et eum! Далеко-далеко за словесными горами в стране гласных и согласных... </h4>
+													<p class="news-item_data">12 ноября 2018</p>
+
+											</a>
+										</div>
+									</div>
+								</div>
+								</div>
+							</div>
+				</section>
 		</section>
-
-	</section>
-
 </section>
-
-
-
-
-
-
-
-
-
 <footer class="footer">
 
 		<div class="scrol-btn">
@@ -154,3 +158,4 @@
 		<script src="../assets/js/script.js"></script>
 	</body>
 	</html>
+
