--- a/dgm/index.html
+++ b/dgm/index.html
@@ -94,22 +94,22 @@
 	</div>
 	<div class="newsmedia">
 		<div class="mission_wrapper">
-			<h3 class="heading_h3">Новости</h3>
+			<h3 class="heading_h3"><a href="about/news.html">Новости</a> </h3>
 
 		<div class="news_content">
 			<div class="news_content_col">
 				<div class="news_list">
-					<a href="" class="news-item">
+					<a href="about/news.html" class="news-item">
 						<h4 class="news-item_title heading_h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, officiis aperiam illo sit voluptate porro dolorem sapiente distinctio quia quos assumenda. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные. Далеко-далеко за словесными горами, в стране гласных и согласных... </h4>
 							<p class="news-item_data">30 марта 2018</p>
 
 					</a>
-					<a href="" class="news-item">
+					<a href="about/news.html" class="news-item">
 						<h4 class="news-item_title heading_h4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque reprehenderit dolore voluptatibus eligendi blanditiis quae optio. Далеко-далеко за словесными горами в стране гласных и согласных... </h4>
 							<p class="news-item_data">10 октября 2018</p>
 
 					</a>
-					<a href="" class="news-item">
+					<a href="about/news.html" class="news-item">
 						<h4 class="news-item_title heading_h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt obcaecati similique dignissimos quidem et eum! Далеко-далеко за словесными горами в стране гласных и согласных... </h4>
 							<p class="news-item_data">12 ноября 2018</p>
 
