--- a/dgm/about/today.html
+++ b/dgm/about/today.html
@@ -50,6 +50,8 @@
 					<a href="history.html">История основания</a>
 					<br>
 					<a href="today.html">История сейчас</a>
+					<br>
+					<a href="news.html">Новости</a>
 				</div>
 			</nav>
 		</div>
