--- a/dgm/personnel/vacancy.html
+++ b/dgm/personnel/vacancy.html
@@ -59,15 +59,45 @@
 				<div class="history_foto history_first_foto">
 					<img class="history_foto_img history_first_foto_img" src="../assets/img/career3.jpg" alt="">
 				</div>
-				<div class="history_content">
-					<p>В 1889 году два инженера-предпринимателя немецкого происхождения Эдуард Боссе и Рудольф Геннефельд приобрели у помещика и шахтовладельца Рутченко несколько десятин земли и основали возле села Григорьевки одноименной волости Бахмутского уезда Екатеринославской губернии машиностроительный и чугунолитейный завод. </p><p>Хозяева предприятия резонно понимали, что для развивающейся в Донецком бассейне угольной промышленности требуется много оборудования, и поэтому хотели заполучить эти перспективные заказы, чтобы обеспечить себе небедную жизнь и выбиться в люди на необъятных просторах Российской империи.</p>
+				<div class="vacancy_content">
+					<p>ГП «Донецкгормаш» – машиностроительное предприятие с широкой номенклатурой изготовления и полным циклом создания машин и механизмов, от проектирования до монтажа.</p>
+					<p>На постоянную работу требуются:</p>
+					<table class="border_1px padding-cells5">
+						 <tbody>
+							  <tr>
+								 <td style="vertical-align:middle;" align="center" bgcolor="e5e5e5">Профессия (должность)</td>
+								 <td style="vertical-align:middle;" align="center" bgcolor="e5e5e5"> Количество вакансий</td>
+								 <td style="vertical-align:middle;" align="center"  bgcolor="e5e5e5">Образование </td>
+								</tr>
+								<tr>
+									<td align="center" class="align-left">Слесарь механосборочных работ</td>
+									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">10 </td>
+									<td align="center">средне-специальное</td>
+								</tr>
+								<tr>
+									<td align="center" class="align-left">Слесарь по сборке металлоконструкций</td>
+									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">10</td>
+									<td class="align-center">средне-специальное</td>
+								</tr>
+								<tr>
+									<td align="center" class="align-left">Электрогазосварщик</td>
+									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">7</td>
+									<td class="align-center">средне-специальное</td>
+								</tr>
+								<tr>
+									<td align="center" class="align-left">Газорезчик</td>
+									<td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">5</td>
+									<td class="align-center">среднее</td>
+								</tr>
+								<tr>
+									 <td align="center" class="align-left">Слесарь-ремонтник</td>
+									 <td style="vertical-align: middle; color: rgb(255, 255, 255);" bgcolor="0d529d" class="align-center">8</td>
+									 <td class="align-center">среднее</td>
+								</tr>
+							</tbody>
+				 </table>
+
 				</div>
-
-				<div class="history_content list">
-					<p> На заводе производились:<br> - паровые машины<br> - углеподъемные машины<br> - паровые и ручные лебедки<br> - паровые котлы<br> - паровые и ручные насосы и вентиляторы<br> - паровые водоотливные машины<br> - шкивы ремневые и канатные до 4 метров диаметром<br> - клети<br> - самоотцепляющиеся аппараты и остановочные снаряды<br> - вагонетки разных видов<br> - буровые инструменты</p>
-
-				</div>
-
 		</section>
 	</section>
 </section>
