--- a/dgm/contact/index.html
+++ b/dgm/contact/index.html
@@ -45,9 +45,10 @@
 	<div class="sidebar_nav_wrapper">
 		<nav class="sidebar_nav">
 			<div class="sidebar_nav_items">
-				<a href="index.html">Контакты</a>
-				<br>
-				<a href="contactform.html">Связаться с нами</a>
+				<ul>
+					<li><a href="index.html">Контакты</a></li>
+					<li><a href="contactform.html">Связаться с нами</a></li>
+				</ul>
 			</div>
 		</nav>
 	</div>
