--- a/dgm/about/today.html
+++ b/dgm/about/today.html
@@ -45,13 +45,12 @@
 		<div class="sidebar_nav_wrapper">
 			<nav class="sidebar_nav">
 				<div class="sidebar_nav_items">
-					<a href="index.html">Миссия и ценности</a>
-					<br>
-					<a href="history.html">История основания</a>
-					<br>
-					<a href="today.html">История сейчас</a>
-					<br>
-					<a href="news.html">Новости</a>
+						<ul>
+							<li><a href="index.html">Миссия и ценности</a></li>
+							<li><a href="history.html">История основания</a></li>
+							<li><a href="today.html">История сейчас</a></li>
+							<li><a href="news.html">Новости</a></li>
+						</ul>
 				</div>
 			</nav>
 		</div>
