--- a/dgm/personnel/vacancy.html
+++ b/dgm/personnel/vacancy.html
@@ -45,9 +45,10 @@
 		<div class="sidebar_nav_wrapper">
 			<nav class="sidebar_nav">
 				<div class="sidebar_nav_items">
-					<a href="index.html">Карьера</a>
-					<br>
-					<a href="vacancy.html">Вакансии</a>
+						<ul>
+								<li><a href="index.html">Карьера</a></li>
+								<li><a href="vacancy.html">Вакансии</a></li>
+							</ul>
 				</div>
 			</nav>
 		</div>
