--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="preloader-inner" id="preloader">
+<!-- <div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
             <div class="one"></div>
@@ -37,7 +37,7 @@
             <div class="double_bounce2"></div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
