--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -306,7 +306,45 @@
                         </div>
                     </div>
                 </div>
-            </section>
+						</section>
+							<!-- block01-->
+							<section class="section block06a" id="section06a">
+								<div class="container">
+										<div class="center-block">
+												<div class="center-block-inner">
+														<!-- <div class="block01__logo"></div> -->
+														<div class="text-block">
+																<div class="name">Вопрос-ответ</div>
+														</div>
+														<ul class="center__nav clearfix">
+																<li class="item1">
+																		<a href="#block02">
+																			Что такое охранная система? Как это работает?</a>
+																</li>
+																<li class="item2">
+																		<a href="#block03">Кто предоставляет услуги охраны квартиры в случае, если
+																			сигнализацию устанавливает и обслуживает МГТС?</a>
+																</li>
+																<li class="item3">
+																		<a href="#block04">Как сигнализация ставится в режим охраны? Это код, ключ или надо звонить на пульт охраны?</a>
+																</li>
+																<li class="item4">
+																		<a href="#block05">
+																			Какое время отводится на снятие квартиры с сигнализации и сколько у меня есть попыток снятия?</a>
+																</li>
+																<li class="item5">
+																	<a href="#block05">
+																		В какой интервал времени должна приехать полиция, если сигнализация сработала?</a>
+															</li>
+															<li class="item6">
+																<a href="#block05">
+																	Возможно ли взять оборудование в аренду, а не покупать по полной стоимости?</a>
+														</li>
+														</ul>
+												</div>
+										</div>
+								</div>
+						</section>
             <section class="section block-07">
                 <div class="container">
                     <div class="inner">
