--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -312,34 +312,71 @@
 								<div class="container">
 										<div class="center-block">
 												<div class="center-block-inner">
-														<!-- <div class="block01__logo"></div> -->
+														<div class="block06a_answer for_item1">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>Пультовая охрана квартиры – это надежное решение для обеспечения безопасности вашего дома. Беспроводные датчики, установленные в Вашей квартире, будут фиксировать проникновение или движение, когда вас нет дома. Сигнал тревоги передается на пульт дежурного Вневедомственной охраны, и к Вам выезжает наряд полиции.</p>
+														</div>
+														<div class="block06a_answer for_item2">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>Ваша квартира будет охраняться полицией, а именно Управлением Вневедомственной Охраны при МВД России по г. Москве.
+
+																	Компания МГТС оказывает услуги в области подключения системы сигнализации и её дальнейшего технического обслуживания.</p>
+														</div>
+														<div class="block06a_answer for_item3">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>Система устанавливается в режим охраны путем ввода числового кода на клавиатуре, которая находится на контрольной панели, и снимается с охраны аналогичным способом.</p>
+														</div>
+														<div class="block06a_answer for_item4">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>У Вас есть от 60 секунд до 120 секунд на правильный ввод кода снятия объекта с охраны и не более 5-ти попыток.</p>
+														</div>
+														<div class="block06a_answer for_item5">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>Стандартное время реагирования в г.Москве, составляет 5-7 минут с момента получения тревожного сигнала.</p>
+														</div>
+														<div class="block06a_answer for_item6">
+																<a class="close" title="Закрыть" href="#close"></a>
+																<p>Да, возможно. В настоящий момент мы предлагаем нашим абонентам услугу аренды, при которой разовый платеж составляет 7 500 руб., а ежемесячный – 530 руб. (при подключении тарифа Стандартный).</p>
+														</div>
 														<div class="text-block">
 																<div class="name">Вопрос-ответ</div>
 														</div>
 														<ul class="center__nav clearfix">
 																<li class="item1">
-																		<a href="#block02">
-																			Что такое охранная система? Как это работает?</a>
+																		<div class="helper">
+																			Что такое охранная система? Как это работает?</div>
+																		<div class="holder_item">
+																			<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item2">
-																		<a href="#block03">Кто предоставляет услуги охраны квартиры в случае, если
-																			сигнализацию устанавливает и обслуживает МГТС?</a>
+																		<div class="helper">Кто предоставляет услуги охраны квартиры в случае, если
+																			сигнализацию устанавливает и обслуживает МГТС?</div>
+																			<div class="holder_item">
+																					<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item3">
-																		<a href="#block04">Как сигнализация ставится в режим охраны? Это код, ключ или надо звонить на пульт охраны?</a>
+																		<div class="helper">Как сигнализация ставится в режим охраны? Это код, ключ или надо звонить на пульт охраны?</div>
+																		<div class="holder_item">
+																				<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item4">
-																		<a href="#block05">
-																			Какое время отводится на снятие квартиры с сигнализации и сколько у меня есть попыток снятия?</a>
+																		<div class="helper">
+																			Какое время отводится на снятие квартиры с сигнализации и сколько у меня есть попыток снятия?</div>
+																			<div class="holder_item">
+																					<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item5">
-																	<a href="#block05">
-																		В какой интервал времени должна приехать полиция, если сигнализация сработала?</a>
-															</li>
-															<li class="item6">
-																<a href="#block05">
-																	Возможно ли взять оборудование в аренду, а не покупать по полной стоимости?</a>
-														</li>
+																	<div class="helper">
+																		В какой интервал времени должна приехать полиция, если сигнализация сработала?</div>
+																		<div class="holder_item">
+																				<p>Узнать ответ</p>	</div>
+																</li>
+																<li class="item6">
+																	<div class="helper">
+																		Возможно ли взять оборудование в аренду, а не покупать по полной стоимости?</div>
+																		<div class="holder_item">
+																				<p>Узнать ответ</p>	</div>
+																</li>
 														</ul>
 												</div>
 										</div>
