--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -344,36 +344,41 @@
 														<ul class="center__nav clearfix">
 																<li class="item1">
 																		<div class="helper">
-																			Что такое охранная система? Как это работает?</div>
+																				Общие
+																				вопросы</div>
 																		<div class="holder_item">
 																			<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item2">
-																		<div class="helper">Кто предоставляет услуги охраны квартиры в случае, если
-																			сигнализацию устанавливает и обслуживает МГТС?</div>
+																		<div class="helper">Оборудование
+																				<br>охранного комплекса</div>
 																			<div class="holder_item">
 																					<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item3">
-																		<div class="helper">Как сигнализация ставится в режим охраны? Это код, ключ или надо звонить на пульт охраны?</div>
+																		<div class="helper">Новое
+																				подключение</div>
 																		<div class="holder_item">
 																				<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item4">
 																		<div class="helper">
-																			Какое время отводится на снятие квартиры с сигнализации и сколько у меня есть попыток снятия?</div>
+																				Переключение <br> или
+																				замена оборудования</div>
 																			<div class="holder_item">
 																					<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item5">
 																	<div class="helper">
-																		В какой интервал времени должна приехать полиция, если сигнализация сработала?</div>
+																			Взаимодействие<br>
+																			с УВО Росгвардии</div>
 																		<div class="holder_item">
 																				<p>Узнать ответ</p>	</div>
 																</li>
 																<li class="item6">
 																	<div class="helper">
-																		Возможно ли взять оборудование в аренду, а не покупать по полной стоимости?</div>
+																			Техническое
+																			обслуживание</div>
 																		<div class="holder_item">
 																				<p>Узнать ответ</p>	</div>
 																</li>
