--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -286,7 +286,7 @@
                     </h2>
                 </div>
             </section>
-            <section class="section block-06">
+            <!-- <section class="section block-06">
                 <div style="width: 1px; height: 1px; background: url('dist/img/block-06_motz2.jpg') left top no-repeat "></div>
                 <div style="width: 1px; height: 1px; background: url('dist/img/block-06_motz3.jpg') left top no-repeat"></div>
                 <div class="container0">
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                 </div>
-						</section>
+						</section> -->
 
 							<section class="section block06a" id="section06a">
 								<div class="container">
