--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="preloader-inner" id="preloader">
+<!-- <div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
             <div class="one"></div>
@@ -37,12 +37,12 @@
             <div class="double_bounce2"></div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
                 <li class="item1"><a href="#homepage">Главная</a></li>
-                <li class="item2"><a href="#ekonomiya">Экономия</a></li>
+                <li class="item2"><a href="pay_for.html">Оплата</a></li>
                 <li class="item6"><a href="#services">Услуги</a></li>
                 <li class="item3"><a href="#advantages">Преимущества</a></li>
                 <li class="item4"><a href="#how-it-work">Как мы работаем</a></li>
@@ -242,50 +242,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section block-05">
-                <div class="container">
 
-                    <ul class="advantages">
-                        <li>
-                            <span class="num">01</span>
-                            <span class="text"><span>Наличие всех<br/>необходимых лицензий</span></span>
-                        </li>
-                        <li>
-                            <span class="num">02</span>
-                            <span class="text"><span>Расчёт системы<br/>в трёх ценовых вариантах</span></span>
-                        </li>
-                        <li>
-                            <span class="num">03</span>
-                            <span class="text"><span>Монтаж системы<br/>в удобное для Вас время</span></span>
-                        </li>
-                        <li class="active">
-                            <span class="num">04</span>
-                            <span class="text"><span>Опыт монтажников<br/>минимум 5 лет</span></span>
-                        </li>
-                        <li>
-                            <span class="num">05</span>
-                            <span class="text"><span>Прозрачные цены</span></span>
-                        </li>
-                        <li>
-                            <span class="num">06</span>
-                            <span class="text"><span>Обслуживание системы на<br/>протяжении всего срока службы</span></span>
-                        </li>
-                        <li>
-                            <span class="num">07</span>
-                            <span class="text"><span>Соблюдение нормативной<br/>документации МЧС</span></span>
-                        </li>
-                        <li>
-                            <span class="num">08</span>
-                            <span class="text"><span>Соблюдение нормативной<br/>документации производителей</span></span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="block-title">
-                    <h2>Преимущество
-                        <span>работы с нами</span>
-                    </h2>
-                </div>
-            </section>
             <!-- <section class="section block-06">
                 <div style="width: 1px; height: 1px; background: url('dist/img/block-06_motz2.jpg') left top no-repeat "></div>
                 <div style="width: 1px; height: 1px; background: url('dist/img/block-06_motz3.jpg') left top no-repeat"></div>
@@ -645,6 +602,50 @@
 										</div>
 								</div>
 						</section>
+						<section class="section block-05">
+							<div class="container">
+
+									<ul class="advantages">
+											<li>
+													<span class="num">01</span>
+													<span class="text"><span>Наличие всех<br/>необходимых лицензий</span></span>
+											</li>
+											<li>
+													<span class="num">02</span>
+													<span class="text"><span>Расчёт системы<br/>в трёх ценовых вариантах</span></span>
+											</li>
+											<li>
+													<span class="num">03</span>
+													<span class="text"><span>Монтаж системы<br/>в удобное для Вас время</span></span>
+											</li>
+											<li class="active">
+													<span class="num">04</span>
+													<span class="text"><span>Опыт монтажников<br/>минимум 5 лет</span></span>
+											</li>
+											<li>
+													<span class="num">05</span>
+													<span class="text"><span>Прозрачные цены</span></span>
+											</li>
+											<li>
+													<span class="num">06</span>
+													<span class="text"><span>Обслуживание системы на<br/>протяжении всего срока службы</span></span>
+											</li>
+											<li>
+													<span class="num">07</span>
+													<span class="text"><span>Соблюдение нормативной<br/>документации МЧС</span></span>
+											</li>
+											<li>
+													<span class="num">08</span>
+													<span class="text"><span>Соблюдение нормативной<br/>документации производителей</span></span>
+											</li>
+									</ul>
+							</div>
+							<div class="block-title">
+									<h2>Преимущество
+											<span>работы с нами</span>
+									</h2>
+							</div>
+					</section>
             <section class="section block-07">
                 <div class="container">
                     <div class="inner">
